syntax = "proto3";
package metadata;

service Metadata {
  rpc AcquireLock(LockRequest) returns (LockResponse);
  rpc ReleaseLock(LockRequest) returns (LockResponse);
}

message LockRequest {
  uint64 key = 1;
}

message LockResponse {
  bool success = 1;
  string message = 2;
}
